# Meta

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  PHASE2_VALIDATION_REPORT.md  README.md  README_intersection.md  inference.py  openenv.yaml  openenv_intersection.yaml  pyproject.toml  requirements.txt  validate_phase2.py
scripts/: run_baseline.py  run_intersection_baseline.py
server/: app.py
src/openenv_email_triage/: __init__.py  app.py  baseline.py  environment.py  graders.py  models.py  tasks.py
src/openenv_intersection/: __init__.py  agent.py  app.py  baseline.py  environment.py  graders.py  models.py  tasks.py
tests/: test_env.py  test_intersection_agent.py  test_intersection_env.py  test_submission_phase2_guard.py
